--- a/carpinteria-web/vercel.json
+++ b/carpinteria-web/vercel.json
@@ -9,6 +9,7 @@
       }
     }
   ],
+  "buildCommand": "cd frontend && pnpm install && pnpm run build",
   "routes": [
     { "handle": "filesystem" },
     { "src": "/.*", "dest": "/index.html" }
