--- a/carpinteria-web/vercel.json
+++ b/carpinteria-web/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && pnpm install && pnpm run build",
+  "installCommand": "cd frontend && npm install",
+  "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/dist",
   "routes": [
     { "handle": "filesystem" },
