--- a/carpinteria-web/backend/package.json
+++ b/carpinteria-web/backend/package.json
@@ -6,7 +6,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.22.0",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "multer": "^2.0.2"
   }
