--- a/carpinteria-web/vercel.json
+++ b/carpinteria-web/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
-  "installCommand": "cd frontend && npm install",
+  "installCommand": "npm install --prefix frontend && npm install multiparty",
   "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/dist",
+  "functions": {
+    "api/**/*.js": {
+      "maxDuration": 10
+    }
+  },
   "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" },
     { "handle": "filesystem" },
     { "src": "/.*", "dest": "/index.html" }
   ]
